--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react learning",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"parcel index.html",
+    "start": "parcel index.html",
     "build": "parcel build index.html"
   },
   "keywords": [
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.15.0"
   },
   "browserslist": [
     "last 2 Chrome version",
